fix(src/scss/homepage): Addeed z-index to nav-links

--- a/src/scss/homepage.scss
+++ b/src/scss/homepage.scss
@@ -29,6 +29,7 @@ nav {
 				position: fixed;
 				right: 0;
 				top: 0;
+				z-index: 999;
 
 				width: 100%;
 				height: 100%;
